CHANGELOG

When		Who		What
======================================================================================
2020-06-16	Richard Forth	Added Dockerfile for CentOS7 testing.
2020-05-31	"pes-soft"	Fix error getting the list of pids introduced in #327
2020-05-31	"pes-soft"	Add compatibility for Apache 2.4 from CentOS7
				Software Collections #327
2020-03-27	Richard Forth	Closes #319.
                                myip.dnsomatic.com Too Many Requests, error
				suppression. 

				NOTES/ERRATA: 
				Commit references #316, meant to be #319.
2020-03-14	"wiechu"	Updates to the way OS Distribution is detected.
2020-03-12      "wiechu"	Few cosmetic changes
2020-03-12      Richard Forth /	Fixed Package management Issue - issue #312
		"wiechu"
2020-03-10      Mark Hyde   	PR to address backward compatibilty with
				MaxClients directive in apache 2.4
2019-12-28      Richard Forth   Quick fix for issue #304
				Report MaxConnectionsPerChild as well as
				MaxRequestsPerChild.
2019-04-17      Richard Forth   Ubuntu 14.04 went EOL. 
2019-02-14      Richard Forth   Closes #250
				Make the serverlimit apply only to prefork
				model.
2019-02-14      Richard Forth   Closes #289
				Apply fixup for borked ps command on Plesk
				servers.
2019-02-12      Richard Forth   Closes #294
				Add verbiage about new --skip-os-version-check
				option.
2019-02-12      psytester       PR #294
				exclude rotatelogs binary from $current_proc_count
				calculation
2019-02-12      Richard Forth   Closes Issue #292
				Updated man page textfile for 2019
2019-02-09      Richard Forth   Closes Issue #283
				This update treates varnich differently to
				other detected services due to changes in
				behvious from 4.1+
2019-02-09      Richard Forth   Revert changes made in  #283
				This went in staging but then got reverted as
				it caused problems and had inexpected
				behaviour.
2019-02-09      Richard Forth   Closes Issue #283
				Service detection inprovements to include