@@ -2,6 +2,7 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2020-06-17	Richard Forth	Added Dockerfile for Debian10 testing.
 2020-06-16	Richard Forth	Added Dockerfile for CentOS7 testing.
 2020-05-31	"pes-soft"	Fix error getting the list of pids introduced in #327
 2020-05-31	"pes-soft"	Add compatibility for Apache 2.4 from CentOS7
